--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.run.all.processors=true
 application.desc=A simple java desktop application based on Swing Application Framework
 application.homepage=http://appframework.dev.java.net
 application.title=Basic Application Example
@@ -20,14 +23,19 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/SKUValidator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.sqlite-jdbc-3.7.15-M1.jar=libs/sqlite-jdbc-3.7.15-M1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -47,6 +55,7 @@ javadoc.windowtitle=
 main.class=skuvalidator.SKUValidatorApp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
