Changed Application.title to change the title of UI.

--- a/src/skuvalidator/resources/SKUValidatorApp.properties
+++ b/src/skuvalidator/resources/SKUValidatorApp.properties
@@ -1,7 +1,7 @@
 # Application global resources
 
 Application.name = SKUValidator
-Application.title = Basic Application Example
+Application.title = SKU Validator
 Application.version = 1.0
 Application.vendor = Sun Microsystems Inc.
 Application.homepage = http\://appframework.dev.java.net/
