Changed the UI to use a CardLayout with 3 panels.

--- a/src/skuvalidator/resources/SKUValidatorView.properties
+++ b/src/skuvalidator/resources/SKUValidatorView.properties
@@ -1,9 +1,3 @@
-# Resources for the SKUValidatorView class
-
-# top-level menus
-
-fileMenu.text = File
-helpMenu.text = Help
 
 # @Action resources
 
@@ -30,3 +24,19 @@ StatusBar.busyIcons[11] = busyicons/busy-icon11.png
 StatusBar.busyIcons[12] = busyicons/busy-icon12.png
 StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
+jLabel1.text=Enter domain
+usernameLabel.text=Enter Username
+usernameTextField.text=
+passwordLabel.text=Enter Password
+passwordTextField.text=
+uploadTestFileButton.text=Upload Test File
+domainTextField.text=
+submitButton.text=Submit
+cancelButton.text=Cancel
+authCheckBox.text=Enable Authentication
+runProfileButton.text=Run Profile
+modifyProfileButton.text=Modify Profile
+deleteProfileButton.text=Delete Profile
+okButton.text=OK
+createProfilesButton.text=Create Profile
+listProfilesButton.text=List Profiles
