--- a/src/skuvalidator/resources/SKUValidatorView.properties
+++ b/src/skuvalidator/resources/SKUValidatorView.properties
@@ -26,6 +26,7 @@ StatusBar.busyIcons[13] = busyicons/busy-icon13.png
 StatusBar.busyIcons[14] = busyicons/busy-icon14.png
 jLabel1.text=Enter domain
 usernameLabel.text=Enter Username
+userEmailLabel.text=Enter Email ID
 usernameTextField.text=
 passwordLabel.text=Enter Password
 passwordTextField.text=
