Added jsoup library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,12 +25,14 @@ dist.jar=${dist.dir}/SKUValidator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsoup-1.7.3.jar=libs/jsoup-1.7.3.jar
 file.reference.sqlite-jdbc-3.7.15-M1.jar=libs/sqlite-jdbc-3.7.15-M1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}
+    ${file.reference.sqlite-jdbc-3.7.15-M1.jar}:\
+    ${file.reference.jsoup-1.7.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
