Changed project properties

--- a/src/skuvalidator/resources/SKUValidatorApp.properties
+++ b/src/skuvalidator/resources/SKUValidatorApp.properties
@@ -3,9 +3,9 @@
 Application.name = SKUValidator
 Application.title = SKU Validator
 Application.version = 1.0
-Application.vendor = Sun Microsystems Inc.
-Application.homepage = http\://appframework.dev.java.net/
-Application.description = A simple Java desktop application based on Swing Application Framework.
+Application.vendor = Jabong
+Application.homepage = 
+Application.description = A basic SKU Validator.
 Application.vendorId = Sun
 Application.id = ${Application.name}
 Application.lookAndFeel = system
